# lead-seeker

./: .envrc.example  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_enrichment_columns.py  003_add_followup_fields.py  b0b20fd4e0c2_create_leads_and_pipeline_runs_tables.py
backend/app/: auth.py  config.py  db.py  logging_config.py  main.py  profile.py
backend/app/api/: leads.py  pipeline.py  stats.py
backend/app/models/: __init__.py  lead.py  pipeline_run.py
backend/app/notifications/: telegram.py
backend/app/pipeline/: drafter.py  enricher.py  extractor.py  fetcher.py  filter.py  followups.py  prompts.py  runner.py
backend/app/pipeline/sources/: __init__.py  gnews.py  google_news.py  hn.py  rss_feeds.py  serpapi.py  yc_directory.py
backend/app/schemas/: lead.py  pipeline.py
backend/config/: profile.yaml
backend/scripts/: backfill_followup_date.py
backend/tests/: conftest.py  test_api.py  test_enricher.py  test_filter.py  test_followups.py  test_gnews_counter.py  test_pipeline.py  test_rss_filter.py
docs/: Backend-Roadmap.md  Data-source-enhancement.md  Design-system.md  Followup-handling.md  Frontend-Roadmap.md  Lead-enrichement.md  PRD.md  Technical-Design-Doc.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  bun.lockb  package.json
frontend/src/: app.css  app.html  hooks.server.ts
(+37 files in other folders)
